--- a/allTopics.ipynb
+++ b/allTopics.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "pip install --user pipenv"
+    "pip install - -user pipenv\n"
    ]
   },
   {
@@ -56,21 +56,23 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "headers1 = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.76 Safari/537.36', \"Upgrade-Insecure-Requests\": \"1\",\"DNT\": \"1\",\"Accept\": \"text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\",\"Accept-Language\": \"en-US,en;q=0.5\",\"Accept-Encoding\": \"gzip, deflate\"}\n",
+    "headers1 = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.76 Safari/537.36', \"Upgrade-Insecure-Requests\": \"1\",\n",
+    "            \"DNT\": \"1\", \"Accept\": \"text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\", \"Accept-Language\": \"en-US,en;q=0.5\", \"Accept-Encoding\": \"gzip, deflate\"}\n",
     "\n",
     "\n",
     "def get_data(url):\n",
-    "  data = requests.get(url, headers=headers1)\n",
-    "  soup = bs(data.text, 'html.parser')\n",
-    "  return soup\n",
+    "    data = requests.get(url, headers=headers1)\n",
+    "    soup = bs(data.text, 'html.parser')\n",
+    "    return soup\n",
+    "\n",
     "\n",
     "allTopics = []\n",
-    "for i in range(1,9):\n",
-    "  url = f'https://realpython.com/tutorials/intermediate/page/{i}/'\n",
-    "  soup = get_data(url)\n",
-    "  titles = soup.find_all('h2', class_=\"card-title h4 my-0 py-0\")\n",
-    "  for title in titles:\n",
-    "    allTopics.append(title.text)"
+    "for i in range(1, 9):\n",
+    "    url = f'https://realpython.com/tutorials/intermediate/page/{i}/'\n",
+    "    soup = get_data(url)\n",
+    "    titles = soup.find_all('h2', class_=\"card-title h4 my-0 py-0\")\n",
+    "    for title in titles:\n",
+    "        allTopics.append(title.text)\n"
    ]
   },
   {
@@ -83,9 +85,20 @@
     "    for text in allTopics:\n",
     "        file.write(str(text))\n",
     "        file.write('\\n')\n",
-    "file.close()\n",
-    "\n"
+    "file.close()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### hi\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
