--- a/allTopics.ipynb
+++ b/allTopics.ipynb
@@ -98,6 +98,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "data.map(e=> {})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
